--- a/team/Somya/footer.css
+++ b/team/Somya/footer.css
@@ -84,6 +84,10 @@ body{
     justify-content: center;
     justify-content: space-around;
 }
+#socIc a{
+    text-decoration: none;
+    color: black;
+}
 #blogos{
     display: grid;
     grid-template-columns: repeat(8,1fr);
