--- a/team/Atul/styles/main.css
+++ b/team/Atul/styles/main.css
@@ -220,3 +220,274 @@ font-size:70px;
   color: white;
   background-color:rgb(247,102,8);
 }
+
+/* //////////////// */
+/* Soumya */
+
+#message {
+  width: 100%;
+  background-color: #F86303;
+  height: 32px;
+  color: #FFFFFF;
+  font-size: 14px;
+}
+#nav{
+  /* border: 1px solid red; */
+  height: 150px;
+}
+#stick{
+  /* background-color: #F86303; */
+  position: relative;
+}
+#taskLinkList {
+  display: flex;
+  justify-content: space-around;
+  font-size: 11px;
+  width: 40%;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
+#taskLinkList a:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+#logoPart{
+  position: relative;
+  left: 4%;
+  bottom: 30px;
+  display: flex;
+  /* border: 1px solid blue; */
+  width: 22%;
+}
+#searchbar{
+  width: 80%;
+  /* border: 1px solid blue; */
+  margin: 0 auto;
+  margin-left: 45px;
+  height: 40px;
+}
+#searchInput{
+  border-radius: 0;
+  height: 38px;
+}
+#searchInput:focus{
+  border: 1px solid #F86303;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+#searchBtn{
+  border-radius: 0;
+  background-color: #F86303;
+  color: white;
+}
+#location{
+  line-height: 16px;
+  font-size: 14px;
+  margin: 15px 15px;
+  width: 150px;
+  border-right: 1px solid gray;
+  padding: 0;
+}
+#deliverTo{
+  line-height: 16px;
+  font-size: 14px;
+  margin: 12px;
+  width: 140px;
+  margin-left: 0;
+  padding: 0;
+}
+#location p:last-child{
+  margin-bottom: 0;
+  color: #00873C;
+}
+#logo{
+  cursor: pointer;
+}
+#abc{
+  position: relative;
+  bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 2px 0px;
+  height: 25%;
+}
+
+/* #bottomBar div:hover{
+  border-bottom: 3px solid #F86303;
+  cursor: pointer;
+} */
+#myAccClicked{
+  /* display: none; */
+  border: 1px solid blue;
+  width: 300px;
+}
+#myAccClicked ul{
+  list-style: none;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+}
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0; 
+}
+.dropdown-menu{
+  padding: 10%;
+  width: 300px;
+}
+.dropdown-menu li{
+  margin-bottom: 3%;
+}
+.macc{
+  color: black;
+  background: none;
+  font-weight: 700;
+  font-size: 15px;
+  border: none;
+}
+.macc:hover{
+  background: none;
+  color: black;
+}
+.macc i{
+  font-size: 18px;
+}
+.a1{
+  background-color: #F86303;
+  color: white;
+  text-align: center;
+}
+.a2{
+  border: 2px solid #F86303;
+  color: #F86303;
+  text-align: center;
+}
+.a3{
+  font-size: 14px;
+  font-weight: 700;
+}
+.a3:hover{
+  text-decoration: underline;
+}
+
+#dropdownMenuLink{
+  background: none;
+  border: none;
+  border-radius: 0;
+  color: black;
+  font-size: 14px;
+}
+/* .alld{
+  background: none;
+  border: none;
+  border-radius: 0;
+  color: black;
+  font-size: 14px;
+} */
+/* .alld:hover{
+  border-bottom: 5px solid #F86303;
+  background: none;
+  color: black;
+} */
+#dropdownMenuLink:hover{
+  border-bottom: 5px solid #F86303;
+  background: none;
+  color: black;
+}
+.ads{
+  width: 250px;
+}
+.ads li{
+  line-height: 12px;
+  margin-bottom: 0;
+  font-size: 13px;
+}
+.ads li p{
+  line-height: 12px;
+  margin-bottom: 0;
+}
+.ads li p:hover{
+  font-weight: bold;
+}
+.hov:hover .sideCard{
+  display: block;
+  width: 150px;
+  margin-left: 50px;
+  border-left: 1px solid #F86303;
+}
+.sideCard a:hover{
+  font-weight: bold;
+}
+.sideCard ul li{
+  list-style: none;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  line-height: 16px;
+  border-bottom: 1px solid rgb(177, 177, 177);
+}
+.sideCard{
+  display: none;
+}
+.ads2{
+  width: 300px;
+}
+.midscr{
+  display: none
+}
+.smlscr{
+  display: none
+}
+#dropMenu{
+  display: none;
+}
+@media all and (min-width: 769px) and (max-width: 1199px){
+  #logoPart{
+      margin-top: 50px;
+  }
+  #ser{
+      margin-top: 30px;
+      width:100%
+  }
+  .midscr{
+      display: block;
+      width:400px;
+      margin-top: 30px;
+      margin-left: 50px;
+  }
+}
+@media all and (min-width: 50px) and (max-width: 770px){
+  #logoPart{
+      margin-top: 50px;
+  }
+  #ser{
+      margin-top: 30px;
+      width:85%
+  }
+  .midscr{
+      display: none;
+  }
+  .smlscr{
+      display: block;
+      margin-top: 18px;
+      position:absolute;
+      right: 10px;
+  }
+  .smlscr .dropdown-menu{
+      position: relative;
+      /* right: 100%; */
+  }
+  #dropMenu{
+      position: relative;
+      border: 1px solid #F86303;
+      top:70px;
+      width: 180px;
+  }
+  #dropMenu ul li{
+      list-style: none;
+      display: inline-block;
+      text-align: center;
+  }
+  #dropMenu ul li a{
+      font-size: 14px;
+  }
+}
