--- a/team/Prithvi/bathroomIdeas.css
+++ b/team/Prithvi/bathroomIdeas.css
@@ -1,7 +1,7 @@
 #container {
     display:flex;
     width:90%;
-    margin: auto;
+    margin: 20px auto;
     /* border:1px solid black; */
     justify-content: center;
 }
