--- a/team/Atul/styles/main.css
+++ b/team/Atul/styles/main.css
@@ -85,9 +85,14 @@ font-size: 20px;
     /* display:flex; */
     /* justify-content: space-between; */
     margin-left:20px;
-    height:200px;
+    height:auto;
     background-color:white;
     font-size:20px;
+    /* border:1px solid red; */
+    border-radius: 10px;
+    
+    box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 10px;
+    margin-top: 20px;
 
     
   }
@@ -102,7 +107,7 @@ font-size: 20px;
   .side.text{
 
 margin-top:10px;
-font-size:70px;
+font-size:50px;
   
   }
   .searchbox{
